--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -1,8 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <button ion-button menuToggle></button>
-    <ion-icon name="menu"></ion-icon>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>  
+    </button>    
     <ion-title>Categorias</ion-title>
   </ion-navbar>
 
