--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -2,8 +2,8 @@
 
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>  
-    </button>    
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Categorias</ion-title>
   </ion-navbar>
 
@@ -11,6 +11,9 @@
 
 
 <ion-content padding>
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+  </ion-fab>
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
       <ion-thumbnail item-start>
