--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
   <ion-avatar>
-    <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png'">
+    <img class="circle" [src]="profileImage">
   </ion-avatar>
   <h2 text-center>{{cliente?.nome}}</h2>
   <p text-center>{{cliente?.email}}</p>
@@ -24,11 +24,8 @@
     <ion-item>
       <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
       <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn">Galeria</button>
-      <button *ngIf="picture" ion-button outline block (click)="sendPicture()" [disabled]="cameraOn">Enviar imagem</button>      
-      <button *ngIf="picture" ion-button outline block (click)="cancel()" [disabled]="cameraOn">Descartar imagem</button>      
+      <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
+      <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
-  </ion-card>
-
-
-
+  </ion-card>  
 </ion-content>
